@@ -1,13 +1,0 @@
-1600,'Nieuwpoort'
-1899,'Chromaphotography'
-1914,'WWI'
-1940,'WWII'
-1971,'jtv'
-1979,'68000'
-1984,'Mac'
-1985,'Amiga'
-1985,'GNU'
-1991,'Linux'
-2001,'9-11'
-2001,'POWER4'
-2004,'HPCA-10'
